--- a/css/mySocialMenu_full.css
+++ b/css/mySocialMenu_full.css
@@ -1,3 +1,8 @@
+/* -------------------------------------------- *
+ *                                              *
+ *   © 2014 Afonso Neto. All rights reserved.   *
+ *                                              *
+ * -------------------------------------------- */ 
 
 .mySocialMenu {
 	width:70px;
